--- a/project/src/main/res/values-da/strings.xml
+++ b/project/src/main/res/values-da/strings.xml
@@ -80,9 +80,9 @@
     <!-- Location for calendar event.  %1$s is the name of the pick up location -->
     <string name="calendar_car_location_TEMPLATE">%1$s</string>
     <!-- Part of the description, showing the itinerary #.  %s is the itinerary number, e.g. "Expedia Itinerary #: 3532532" -->
-    <string name="calendar_car_desc_itinerary_TEMPLATE">Expedia-rejseplansnummer: %s</string>
+    <string name="calendar_desc_itinerary_TEMPLATE">{brand}-rejseplansnummer: {itinerary}</string>
     <!-- Part of the description, showing a phone # for support.  %1$s is the local phone number and %2$s is for toll free no, e.g. "Expedia Customer Support: 222-222-2222 and 800-321-1111" -->
-    <string name="calendar_car_desc_support_TEMPLATE">Expedias kundeservice: %1$s og %2$s</string>
+    <string name="calendar_desc_support_TEMPLATE">{brand}s kundeservice: {localphone} og {phone}</string>
 
     <!-- Label for hotel search toolbar -->
     <string name="hotel_toolbar_title">Søg efter hoteller</string>
@@ -859,7 +859,7 @@
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
-    <string name="facebook_weve_found_your_account">Hej &lt;b&gt;%1$s&lt;/b&gt;, det ser ud til, at vi har fundet din Expedia-konto! Indtast venligst din adgangskode til Expedia nedenfor for at forbinde din facebook-konto og din Expedia-konto.</string>
+    <string name="facebook_weve_found_your_account_TEMPLATE">Hej &lt;b&gt;{name}&lt;/b&gt;! Det ser ud til, at vi har fundet din {brand}-konto! Indtast venligst din adgangskode til {brand} nedenfor for at forbinde din Facebook-konto og din {brand}-konto.</string>
     <!-- Weve fetched your facebook info -->
     <string name="facebook_weve_fetched_your_info">Hej &lt;b&gt;%1$s&lt;/b&gt;, vi har hentet dine Facebook-oplysninger!</string>
     <!-- Sign in with facebook (button text) -->
@@ -875,7 +875,7 @@
     <!-- Sign failed try again. Note: the text "Country setting" is referring to the option from the settings page that is titled "Country" in the English translation. -->
     <string name="sign_in_failed_try_again">Login-forsøget mislykkedes. Hvis din e-mail og adgangskode er korrekte, bedes du kontrollere, om indstillingen for land i din app er korrekt.</string>
     <!-- User needs to reset password -->
-    <string name="sign_in_reset_password">Du bedes oprette et nyt, universelt login, som du kan bruge på alle Expedias hjemmesider.&lt;br&gt;Nulstil din adgangskode ved at klikke på linket ‘Har du glemt din adgangskode\&apos;? nedenfor.</string>
+    <string name="sign_in_reset_password_TEMPLATE">Du bedes oprette et nyt, universelt login, som du kan bruge på alle {brand}s hjemmesider.&lt;br&gt;Nulstil din adgangskode ved at klikke på linket ‘Har du glemt din adgangskode\&apos;? nedenfor.</string>
     <!-- Facebook connect password hint -->
     <string name="brand_password_hint_TEMPLATE">Adgangskode til {brand}</string>
     <!-- Link accounts -->
@@ -887,7 +887,7 @@
     <!-- User Denied email permission Heading -->
     <string name="user_denied_permission_email_heading">E-mailtilladelse</string>
     <!-- User Denied email permission re-request message -->
-    <string name="user_denied_permission_email_message">For at logge på med Facebook har vi brug for din tilladelse til at verificere din e-mailadresse. \n\nTryk på Facebook-knappen nedenfor for at give Expedia tilladelse til at verificere din e-mailadresse. Tak!</string>
+    <string name="user_denied_permission_email_message_TEMPLATE">For at logge på med Facebook har vi brug for din tilladelse til at verificere din e-mailadresse. \n\nTryk på Facebook-knappen nedenfor for at give {brand} tilladelse til at verificere din e-mailadresse. Tak!</string>
     <!-- Linking your accounts -->
     <string name="linking_your_accounts">Forbinder dine kontoer…</string>
     <!-- Sign In -->
@@ -1436,7 +1436,7 @@
     <!-- Hotel phone number -->
     <string name="share_template_long_hotel_4_phone">Telefon\n%s</string>
     <!-- App download link -->
-    <string name="share_template_long_ad">Book hoteller, flyrejser og se/del dine rejseplaner. Download Expedias gratis mobil-app i dag.\n%s</string>
+    <string name="share_long_ad_TEMPLATE">Reserver hoteller, flyrejser og se/del dine rejseplaner. Download {brand}s gratis mobilapp i dag.\n{appinfourl}</string>
     <!-- 1: city 2: date string -->
     <string name="share_template_subject_flight">Jeg rejser til %1$s d. %2$s</string>
     <!-- 1: travelerName 2: city 3: date string -->
@@ -1532,7 +1532,7 @@
 
     <!-- Flights -->
     <!-- Label for Flight Search in task manager -->
-    <string name="Expedia_Flights">Expedia-flyrejser</string>
+    <string name="Flights_TEMPLATE">{brand}s flyrejser</string>
     <!-- Label for flight search part of app -->
     <string name="search_flights">Søg efter flybilletter</string>
     <!-- Hint in edit text that indicates one should enter a departure airport -->
@@ -2847,7 +2847,7 @@
     <!-- Label for "Expedia website" button in info page -->
     <string name="website_TEMPLATE">{brand}s hjemmeside</string>
     <!-- Label for "app support" button in info page -->
-    <string name="app_support_TEMPLATE">App Support</string>
+    <string name="app_support">App Support</string>
     <!-- Label for link to terms and conditions -->
     <string name="info_label_terms_conditions">Vilkår og betingelser</string>
     <!-- Label for link to privacy policy -->
@@ -2975,7 +2975,7 @@
     <!-- The hotel booking failed -->
     <string name="e3_error_checkout_booking_failed">En fejl forhindrede os i at fuldføre din reservation. Forsøg venligst igen.</string>
     <!-- The hotel booking succeeded, but there were some errors. Likely an email was not sent -->
-    <string name="e3_error_checkout_booking_succeeded_with_errors">Dit hotel er booket! Hvis du har brug for en rejseplan med det samme, så ring venligst til Expedias kundeservice.</string>
+    <string name="e3_error_checkout_booking_succeeded_with_errors_TEMPLATE">Dit hotel er reserveret! Hvis du har brug for en rejseplan med det samme, bedes du venligst ringe til {brand}s kundeservice.</string>
     <!-- The hotel room is no longer available -->
     <string name="e3_error_checkout_hotel_room_unavailable">Det værelse, du ønskede, er desværre ikke længere ledigt.</string>
     <!-- There is invalid input in the hotel booking form. Please fix it. -->
@@ -2998,9 +2998,9 @@
     <!-- HotelOffers API method -->
     <!-- The hotel offer is no longer available -->
     <string name="e3_error_hotel_offers_hotel_offer_unavailable">Vi beklager! Tilbuddet på dette værelse er forbi, men vi har andre gode tilbud til dig.</string>
-    <string name="e3_error_hotel_offers_hotel_room_unavailable">Det værelse, du ønskede, er desværre ikke længere ledigt.</string>
+    <string name="e3_error_hotel_offers_hotel_room_unavailable">Det værelse, du ønskede, er desværre ikke længere tilgængeligt.</string>
     <!-- For some reason the API failed and we couldn't complete the search -->
-    <string name="e3_error_hotel_offers_hotel_service_failure">Vi kunne desværre ikke få forbindelse til Expedia. Forsøg venligst igen.</string>
+    <string name="e3_error_hotel_offers_hotel_service_failure_TEMPLATE">Vi kunne desværre ikke oprette forbindelse til {brand}. Prøv venligst igen.</string>
     <!-- There are no longer any rooms for the hotel offer -->
     <string name="e3_error_hotel_offers_invalid_input">Vi beklager! Tilbuddet på dette værelse er forbi, men vi har andre gode tilbud til dig.</string>
     <!-- There are no longer any rooms for the hotel offer -->
