--- a/project/src/main/res/values-es-rES/strings.xml
+++ b/project/src/main/res/values-es-rES/strings.xml
@@ -80,9 +80,9 @@
     <!-- Location for calendar event.  %1$s is the name of the pick up location -->
     <string name="calendar_car_location_TEMPLATE">%1$s</string>
     <!-- Part of the description, showing the itinerary #.  %s is the itinerary number, e.g. "Expedia Itinerary #: 3532532" -->
-    <string name="calendar_car_desc_itinerary_TEMPLATE">Número de itinerario de Expedia: %s</string>
+    <string name="calendar_desc_itinerary_TEMPLATE">Número de itinerario de {brand}: {itinerary}</string>
     <!-- Part of the description, showing a phone # for support.  %1$s is the local phone number and %2$s is for toll free no, e.g. "Expedia Customer Support: 222-222-2222 and 800-321-1111" -->
-    <string name="calendar_car_desc_support_TEMPLATE">Servicio de atención al cliente de Expedia: %1$s y %2$s</string>
+    <string name="calendar_desc_support_TEMPLATE">Servicio de atención al cliente de {brand}: {localphone} y {phone}</string>
 
     <!-- Label for hotel search toolbar -->
     <string name="hotel_toolbar_title">Buscar hoteles</string>
@@ -859,7 +859,7 @@
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
-    <string name="facebook_weve_found_your_account">¡Hola, &lt;b&gt;%1$s&lt;/b&gt;! Hemos encontrado tu cuenta de Expedia. Introduce tu contraseña de Expedia para conectar tu cuenta de Facebook a tu cuenta de Expedia.</string>
+    <string name="facebook_weve_found_your_account_TEMPLATE">¡Hola, &lt;b&gt;{name}&lt;/b&gt;! Hemos encontrado tu cuenta de {brand} Introduce tu contraseña de {brand} para conectar tu cuenta de Facebook a tu cuenta de {brand}.</string>
     <!-- Weve fetched your facebook info -->
     <string name="facebook_weve_fetched_your_info">¡Hola, &lt;b&gt;%1$s&lt;/b&gt;! Hemos cargado tu información de Facebook.</string>
     <!-- Sign in with facebook (button text) -->
@@ -875,7 +875,7 @@
     <!-- Sign failed try again. Note: the text "Country setting" is referring to the option from the settings page that is titled "Country" in the English translation. -->
     <string name="sign_in_failed_try_again">No se ha podido iniciar sesión. Si tu correo electrónico y contraseña son correctos, confirma que la configuración "País" de la aplicación es correcta.</string>
     <!-- User needs to reset password -->
-    <string name="sign_in_reset_password">Necesitamos que crees un nuevo inicio de sesión que podrás utilizar en todos los sitios web internacionales de Expedia.&lt;br&gt;Utiliza el enlace "¿Has olvidado tu contraseña?" para restablecer tu contraseña.</string>
+    <string name="sign_in_reset_password_TEMPLATE">Necesitamos que crees un nuevo inicio de sesión que podrás utilizar en todos los sitios web internacionales de {brand}.&lt;br&gt;Utiliza el enlace "¿Has olvidado tu contraseña?" para restablecer tu contraseña.</string>
     <!-- Facebook connect password hint -->
     <string name="brand_password_hint_TEMPLATE">Contraseña de {brand}</string>
     <!-- Link accounts -->
@@ -887,7 +887,7 @@
     <!-- User Denied email permission Heading -->
     <string name="user_denied_permission_email_heading">Verificación de correo electrónico</string>
     <!-- User Denied email permission re-request message -->
-    <string name="user_denied_permission_email_message">Para poder iniciar sesión con Facebook, necesitamos que nos des permiso para verificar tu dirección de correo electrónico. \n\nSolo tienes que seleccionar el botón de Facebook que aparece más abajo para autorizar a Expedia a que verifique tu dirección de correo electrónico. ¡Muchas gracias!</string>
+    <string name="user_denied_permission_email_message_TEMPLATE">Para poder iniciar sesión con Facebook, necesitamos que nos des permiso para verificar tu dirección de correo electrónico. \n\nSolo tienes que seleccionar el botón de Facebook que aparece más abajo para autorizar a {brand} a que verifique tu dirección de correo electrónico. ¡Muchas gracias!</string>
     <!-- Linking your accounts -->
     <string name="linking_your_accounts">Enlazando cuentas…</string>
     <!-- Sign In -->
@@ -1436,7 +1436,7 @@
     <!-- Hotel phone number -->
     <string name="share_template_long_hotel_4_phone">Teléfono\n%s</string>
     <!-- App download link -->
-    <string name="share_template_long_ad">Reserva hoteles y vuelos, y visualiza y comparte tus itinerarios Descarga la aplicación gratuita de Expedia hoy.\n%s</string>
+    <string name="share_long_ad_TEMPLATE">Reserva hoteles y vuelos, y visualiza y comparte tus itinerarios. Descarga la aplicación gratuita de {brand} hoy mismo.\n{appinfourl}</string>
     <!-- 1: city 2: date string -->
     <string name="share_template_subject_flight">Voy a volar a %1$s el %2$s</string>
     <!-- 1: travelerName 2: city 3: date string -->
@@ -1532,7 +1532,7 @@
 
     <!-- Flights -->
     <!-- Label for Flight Search in task manager -->
-    <string name="Expedia_Flights">Vuelos de Expedia</string>
+    <string name="Flights_TEMPLATE">{brand} vuelos</string>
     <!-- Label for flight search part of app -->
     <string name="search_flights">Buscar vuelos</string>
     <!-- Hint in edit text that indicates one should enter a departure airport -->
@@ -2519,7 +2519,7 @@
     <!-- Recommended string shown in hotel details -->
     <string name="x_percent_guests_recommend">El %2.0f%% de los clientes recomiendan este hotel</string>
     <!-- new material Hotel results cell guest rating -->
-    <string name="customer_rating_percent_Template">El {rating}{percent}</string>
+    <string name="customer_rating_percent_Template">{rating}{percent}</string>
     <!-- new material Hotel results cell guest recommend-->
     <string name="guest_recommend">de los clientes lo recomiendan</string>
 
@@ -2848,7 +2848,7 @@
     <!-- Label for "Expedia website" button in info page -->
     <string name="website_TEMPLATE">Web de {brand}</string>
     <!-- Label for "app support" button in info page -->
-    <string name="app_support_TEMPLATE">Ayuda de la aplicación</string>
+    <string name="app_support">Ayuda de la aplicación</string>
     <!-- Label for link to terms and conditions -->
     <string name="info_label_terms_conditions">Términos y condiciones</string>
     <!-- Label for link to privacy policy -->
@@ -2976,7 +2976,7 @@
     <!-- The hotel booking failed -->
     <string name="e3_error_checkout_booking_failed">Un error nos ha impedido completar tu reserva. Vuelve a intentarlo.</string>
     <!-- The hotel booking succeeded, but there were some errors. Likely an email was not sent -->
-    <string name="e3_error_checkout_booking_succeeded_with_errors">¡Has hecho la reserva con éxito! Si necesitas un itinerario inmediatamente, llama al Servicio de atención al cliente de Expedia.</string>
+    <string name="e3_error_checkout_booking_succeeded_with_errors_TEMPLATE">¡Has hecho la reserva con éxito! Si necesitas un itinerario inmediatamente, llama al servicio de atención al cliente de {brand}.</string>
     <!-- The hotel room is no longer available -->
     <string name="e3_error_checkout_hotel_room_unavailable">Lo sentimos, pero la habitación que has solicitado ya no está disponible.</string>
     <!-- There is invalid input in the hotel booking form. Please fix it. -->
@@ -3001,7 +3001,7 @@
     <string name="e3_error_hotel_offers_hotel_offer_unavailable">Lo sentimos. La promoción para esta habitación ha terminado, pero hay otras ofertas disponibles.</string>
     <string name="e3_error_hotel_offers_hotel_room_unavailable">Lo sentimos, pero la habitación que has solicitado ya no está disponible.</string>
     <!-- For some reason the API failed and we couldn't complete the search -->
-    <string name="e3_error_hotel_offers_hotel_service_failure">Lo sentimos, pero no hemos podido conectar con Expedia. Vuelve a intentarlo.</string>
+    <string name="e3_error_hotel_offers_hotel_service_failure_TEMPLATE">Lo sentimos, pero no hemos podido conectar con {brand}. Vuelve a intentarlo.</string>
     <!-- There are no longer any rooms for the hotel offer -->
     <string name="e3_error_hotel_offers_invalid_input">Lo sentimos. La promoción para esta habitación ha terminado, pero hay otras ofertas disponibles.</string>
     <!-- There are no longer any rooms for the hotel offer -->
