--- a/project/src/main/res/values-es/strings.xml
+++ b/project/src/main/res/values-es/strings.xml
@@ -80,9 +80,9 @@
     <!-- Location for calendar event.  %1$s is the name of the pick up location -->
     <string name="calendar_car_location_TEMPLATE">%1$s</string>
     <!-- Part of the description, showing the itinerary #.  %s is the itinerary number, e.g. "Expedia Itinerary #: 3532532" -->
-    <string name="calendar_car_desc_itinerary_TEMPLATE">Núm. de itinerario de Expedia: %s</string>
+    <string name="calendar_desc_itinerary_TEMPLATE">Núm. de itinerario de {brand}: {itinerary}</string>
     <!-- Part of the description, showing a phone # for support.  %1$s is the local phone number and %2$s is for toll free no, e.g. "Expedia Customer Support: 222-222-2222 and 800-321-1111" -->
-    <string name="calendar_car_desc_support_TEMPLATE">Servicio de atención a clientes de Expedia: %1$s y %2$s</string>
+    <string name="calendar_desc_support_TEMPLATE">Servicio de atención a clientes de {brand}: {localphone} y {phone}</string>
 
     <!-- Label for hotel search toolbar -->
     <string name="hotel_toolbar_title">Busca hoteles</string>
@@ -859,7 +859,7 @@
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
-    <string name="facebook_weve_found_your_account">Hola, &lt;b&gt;%1$s&lt;/b&gt;: ¡parece ser que encontramos tu cuenta de Expedia! Ingresa tu contraseña de Expedia a continuación para vincular tus cuentas de Facebook y Expedia.</string>
+    <string name="facebook_weve_found_your_account_TEMPLATE">Hola, &lt;b&gt;{name}&lt;/b&gt;: ¡parece ser que encontramos tu cuenta de {brand}! Ingresa tu contraseña de {brand} a continuación para vincular tus cuentas de Facebook y {brand}.</string>
     <!-- Weve fetched your facebook info -->
     <string name="facebook_weve_fetched_your_info">&lt;b&gt;%1$s&lt;/b&gt;: ¡ya cargamos tu información de Facebook!</string>
     <!-- Sign in with facebook (button text) -->
@@ -875,7 +875,7 @@
     <!-- Sign failed try again. Note: the text "Country setting" is referring to the option from the settings page that is titled "Country" in the English translation. -->
     <string name="sign_in_failed_try_again">Falló el inicio de sesión. Si tu correo electrónico y tu contraseña son correctos, confirma que la configuración del país de tu aplicación sea la correcta.</string>
     <!-- User needs to reset password -->
-    <string name="sign_in_reset_password">Necesitamos que crees un nuevo inicio de sesión internacional para todos los sitios de Expedia.&lt;br&gt;Restablece tu contraseña utilizando el vínculo \&apos;¿Se te olvidó tu contraseña?\&apos; a continuación.</string>
+    <string name="sign_in_reset_password_TEMPLATE">Necesitamos que crees un nuevo inicio de sesión internacional para todos los sitios de {brand}.&lt;br&gt;Restablece tu contraseña utilizando el vínculo \&apos;¿Se te olvidó tu contraseña?\&apos; a continuación.</string>
     <!-- Facebook connect password hint -->
     <string name="brand_password_hint_TEMPLATE">Contraseña de {brand}</string>
     <!-- Link accounts -->
@@ -887,7 +887,7 @@
     <!-- User Denied email permission Heading -->
     <string name="user_denied_permission_email_heading">Permiso de verificación de correo electrónico</string>
     <!-- User Denied email permission re-request message -->
-    <string name="user_denied_permission_email_message">Para iniciar sesión con Facebook, necesitamos tu autorización para verificar tu dirección de correo electrónico. \n\nPresiona el botón de Facebook a continuación para autorizar a Expedia la verificación de tu dirección de correo electrónico. Gracias.</string>
+    <string name="user_denied_permission_email_message_TEMPLATE">Para iniciar sesión con Facebook, necesitamos tu autorización para verificar tu dirección de correo electrónico. \n\nPresiona el botón de Facebook a continuación para autorizar a {brand} la verificación de tu dirección de correo electrónico. Gracias.</string>
     <!-- Linking your accounts -->
     <string name="linking_your_accounts">Estamos vinculando tus cuentas…</string>
     <!-- Sign In -->
@@ -1436,7 +1436,7 @@
     <!-- Hotel phone number -->
     <string name="share_template_long_hotel_4_phone">Teléfono\n%s</string>
     <!-- App download link -->
-    <string name="share_template_long_ad">Reserva hoteles, vuelos, y consulta y comparte tus itinerarios. Descarga la aplicación móvil gratuita, de Expedia, hoy mismo.\n%s</string>
+    <string name="share_long_ad_TEMPLATE">Reserva hoteles, vuelos, y consulta y comparte tus itinerarios. Descarga la aplicación gratuita para dispositivos móviles de {brand} hoy mismo.\n{appinfourl}</string>
     <!-- 1: city 2: date string -->
     <string name="share_template_subject_flight">Vuelo a %1$s en %2$s</string>
     <!-- 1: travelerName 2: city 3: date string -->
@@ -1532,7 +1532,7 @@
 
     <!-- Flights -->
     <!-- Label for Flight Search in task manager -->
-    <string name="Expedia_Flights">Vuelos de Expedia</string>
+    <string name="Flights_TEMPLATE">Vuelos de {brand}</string>
     <!-- Label for flight search part of app -->
     <string name="search_flights">Buscar vuelos</string>
     <!-- Hint in edit text that indicates one should enter a departure airport -->
@@ -2847,7 +2847,7 @@
     <!-- Label for "Expedia website" button in info page -->
     <string name="website_TEMPLATE">Sitio web de {brand}</string>
     <!-- Label for "app support" button in info page -->
-    <string name="app_support_TEMPLATE">Ayuda sobre la aplicación</string>
+    <string name="app_support">Ayuda sobre la aplicación.</string>
     <!-- Label for link to terms and conditions -->
     <string name="info_label_terms_conditions">Términos y condiciones</string>
     <!-- Label for link to privacy policy -->
@@ -2975,7 +2975,7 @@
     <!-- The hotel booking failed -->
     <string name="e3_error_checkout_booking_failed">Un error no nos ha permitido completar tu reservación. Favor de intentarlo de nuevo.</string>
     <!-- The hotel booking succeeded, but there were some errors. Likely an email was not sent -->
-    <string name="e3_error_checkout_booking_succeeded_with_errors">¡Has reservado tu habitación de hotel con éxito! Si necesitas un itinerario de inmediato, favor de llamar a Servicio a Clientes.</string>
+    <string name="e3_error_checkout_booking_succeeded_with_errors_TEMPLATE">¡Has reservado tu habitación de hotel con éxito! Si necesitas un itinerario de inmediato, llama al Servicio de atención a clientes de {brand}.</string>
     <!-- The hotel room is no longer available -->
     <string name="e3_error_checkout_hotel_room_unavailable">Lo sentimos, pero la habitación que has solicitado ya no está disponible.</string>
     <!-- There is invalid input in the hotel booking form. Please fix it. -->
@@ -3000,7 +3000,7 @@
     <string name="e3_error_hotel_offers_hotel_offer_unavailable">¡Lo sentimos! La promoción para esta habitación ha terminado; sin embargo hay otras opciones disponibles.</string>
     <string name="e3_error_hotel_offers_hotel_room_unavailable">Lo sentimos, pero la habitación que has solicitado ya no está disponible.</string>
     <!-- For some reason the API failed and we couldn't complete the search -->
-    <string name="e3_error_hotel_offers_hotel_service_failure">Lo sentimos pero no pudimos conectarnos a Expedia. Inténtalo de nuevo por favor.</string>
+    <string name="e3_error_hotel_offers_hotel_service_failure_TEMPLATE">Lo sentimos pero no pudimos conectarnos a {brand}. Inténtalo de nuevo por favor.</string>
     <!-- There are no longer any rooms for the hotel offer -->
     <string name="e3_error_hotel_offers_invalid_input">¡Lo sentimos! La promoción para esta habitación ha terminado; sin embargo hay otras opciones disponibles.</string>
     <!-- There are no longer any rooms for the hotel offer -->
