--- a/project/src/main/res/values-fr-rCA/strings.xml
+++ b/project/src/main/res/values-fr-rCA/strings.xml
@@ -80,16 +80,16 @@
     <!-- Location for calendar event.  %1$s is the name of the pick up location -->
     <string name="calendar_car_location_TEMPLATE">%1$s</string>
     <!-- Part of the description, showing the itinerary #.  %s is the itinerary number, e.g. "Expedia Itinerary #: 3532532" -->
-    <string name="calendar_car_desc_itinerary_TEMPLATE">Numéro d\&apos;itinéraire Expedia : %s</string>
+    <string name="calendar_desc_itinerary_TEMPLATE">Nº d\&apos;itinéraire {brand} : {itinerary}</string>
     <!-- Part of the description, showing a phone # for support.  %1$s is the local phone number and %2$s is for toll free no, e.g. "Expedia Customer Support: 222-222-2222 and 800-321-1111" -->
-    <string name="calendar_car_desc_support_TEMPLATE">Soutien à la clientèle Expedia : %1$s et %2$s</string>
+    <string name="calendar_desc_support_TEMPLATE">{brand} Soutien à la clientèle : {localphone} et {phone}</string>
 
     <!-- Label for hotel search toolbar -->
     <string name="hotel_toolbar_title">Rechercher des hôtels</string>
     <!-- Label for hotel suggestion -->
     <string name="search_location">Rechercher un emplacement</string>
     <!-- Label for pickup location selector -->
-    <string name="pick_up_location">Lieu de prise en charge</string>
+    <string name="pick_up_location">Prise en charge</string>
     <!-- Label for car dropoff selector, indicates it cannot be different from pickup location -->
     <string name="drop_off_location">Remise</string>
     <!-- Label for Car Search Screen header -->
@@ -859,7 +859,7 @@
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
-    <string name="facebook_weve_found_your_account">Bonjour &lt;b&gt;%1$s&lt;/b&gt;, nous avons bien trouvé votre compte Expedia! Veuillez entrer votre mot de passe Expedia ci-dessous pour vous connecter à vos comptes Facebook et Expedia.</string>
+    <string name="facebook_weve_found_your_account_TEMPLATE">Bonjour &lt;b&gt;{name}&lt;/b&gt;, nous avons bien trouvé votre compte {brand}! Veuillez entrer votre mot de passe {brand} ci-dessous pour lier vos comptes Facebook et {brand}.</string>
     <!-- Weve fetched your facebook info -->
     <string name="facebook_weve_fetched_your_info">Bonjour &lt;b&gt;%1$s&lt;/b&gt;, nous avons chargé votre information Facebook!</string>
     <!-- Sign in with facebook (button text) -->
@@ -875,7 +875,7 @@
     <!-- Sign failed try again. Note: the text "Country setting" is referring to the option from the settings page that is titled "Country" in the English translation. -->
     <string name="sign_in_failed_try_again">Échec d\&apos;ouverture de session. Si votre adresse courriel et votre mot de passe sont exacts, vérifiez et confirmez que votre paramètre Pays de l\&apos;application est correct.</string>
     <!-- User needs to reset password -->
-    <string name="sign_in_reset_password">Vous devez créer un nouveau code d\&apos;ouverture de session international vous donnant accès à tous les sites d\&apos;Expedia.&lt;br&gt;Veuillez réinitialiser votre mot de passe à l\&apos;aide du lien « Oublié votre mot de passe? » ci-dessous.</string>
+    <string name="sign_in_reset_password_TEMPLATE">Vous devez créer un nouvel identifiant international vous donnant accès à tous les sites {brand}.&lt;br&gt;Veuillez réinitialiser votre mot de passe à l\&apos;aide du lien « Oublié votre mot de passe? » ci-dessous.</string>
     <!-- Facebook connect password hint -->
     <string name="brand_password_hint_TEMPLATE">{brand}Mot de passe</string>
     <!-- Link accounts -->
@@ -887,7 +887,7 @@
     <!-- User Denied email permission Heading -->
     <string name="user_denied_permission_email_heading">Autorisation de courriel</string>
     <!-- User Denied email permission re-request message -->
-    <string name="user_denied_permission_email_message">Pour ouvrir une session sur Facebook, vous devez nous autoriser à vérifier votre adresse courriel. \n\nVeuillez appuyer sur le bouton Facebook ci-dessous pour nous autoriser à vérifier votre adresse courriel. Merci!</string>
+    <string name="user_denied_permission_email_message_TEMPLATE">Pour ouvrir une session sur Facebook, vous devez nous autoriser à vérifier votre adresse courriel. \n\nVeuillez appuyer sur le bouton Facebook ci-dessous pour autoriser {brand} à vérifier votre adresse courriel. Merci!</string>
     <!-- Linking your accounts -->
     <string name="linking_your_accounts">Connexion de vos comptes…</string>
     <!-- Sign In -->
@@ -1436,7 +1436,7 @@
     <!-- Hotel phone number -->
     <string name="share_template_long_hotel_4_phone">Téléphone\n%s</string>
     <!-- App download link -->
-    <string name="share_template_long_ad">Réservez hôtels, vols, consultez et partagez vos itinéraires. Téléchargez l\&apos;application mobile gratuite Expedia aujourd\&apos;hui.\n%s</string>
+    <string name="share_long_ad_TEMPLATE">Réservez des hôtels et des vols ou consultez et partagez vos itinéraires. Téléchargez gratuitement l\&apos;application mobile {brand}.\n{appinfourl}</string>
     <!-- 1: city 2: date string -->
     <string name="share_template_subject_flight">Le %2$s, je pars pour %1$s!</string>
     <!-- 1: travelerName 2: city 3: date string -->
@@ -1532,7 +1532,7 @@
 
     <!-- Flights -->
     <!-- Label for Flight Search in task manager -->
-    <string name="Expedia_Flights">Vols Expedia</string>
+    <string name="Flights_TEMPLATE">{brand} vols</string>
     <!-- Label for flight search part of app -->
     <string name="search_flights">Rechercher des vols</string>
     <!-- Hint in edit text that indicates one should enter a departure airport -->
@@ -2847,7 +2847,7 @@
     <!-- Label for "Expedia website" button in info page -->
     <string name="website_TEMPLATE">Site Web {brand}</string>
     <!-- Label for "app support" button in info page -->
-    <string name="app_support_TEMPLATE">Soutien pour l\&apos;application</string>
+    <string name="app_support">Soutien pour l\&apos;application</string>
     <!-- Label for link to terms and conditions -->
     <string name="info_label_terms_conditions">Conditions générales</string>
     <!-- Label for link to privacy policy -->
@@ -2975,7 +2975,7 @@
     <!-- The hotel booking failed -->
     <string name="e3_error_checkout_booking_failed">Une erreur nous empêche de terminer la réservation. Veuillez réessayer.</string>
     <!-- The hotel booking succeeded, but there were some errors. Likely an email was not sent -->
-    <string name="e3_error_checkout_booking_succeeded_with_errors">Votre réservation d\&apos;hôtel a bien été effectuée! Pour obtenir un itinéraire dès maintenant, veuillez communiquer avec le soutien à la clientèle Expedia.</string>
+    <string name="e3_error_checkout_booking_succeeded_with_errors_TEMPLATE">Votre réservation d\&apos;hôtel a bien été effectuée! Pour obtenir un itinéraire dès maintenant, veuillez appeler le soutien à la clientèle de {brand}.</string>
     <!-- The hotel room is no longer available -->
     <string name="e3_error_checkout_hotel_room_unavailable">Désolé, la chambre sélectionnée n\&apos;est plus disponible.</string>
     <!-- There is invalid input in the hotel booking form. Please fix it. -->
@@ -3000,7 +3000,7 @@
     <string name="e3_error_hotel_offers_hotel_offer_unavailable">Désolé! L\&apos;offre pour cette chambre a pris fin et aucune autre offre n\&apos;est disponible.</string>
     <string name="e3_error_hotel_offers_hotel_room_unavailable">Désolé, la chambre sélectionnée n\&apos;est plus disponible.</string>
     <!-- For some reason the API failed and we couldn't complete the search -->
-    <string name="e3_error_hotel_offers_hotel_service_failure">Désolé, nous n\&apos;avons pas pu établir la connexion avec Expedia. Veuillez réessayer.</string>
+    <string name="e3_error_hotel_offers_hotel_service_failure_TEMPLATE">Désolé, nous n\&apos;avons pas pu établir la connexion à {brand}. Veuillez réessayer.</string>
     <!-- There are no longer any rooms for the hotel offer -->
     <string name="e3_error_hotel_offers_invalid_input">Désolé! L\&apos;offre pour cette chambre a pris fin et aucune autre offre n\&apos;est disponible.</string>
     <!-- There are no longer any rooms for the hotel offer -->
