--- a/project/src/main/res/values-fr/strings.xml
+++ b/project/src/main/res/values-fr/strings.xml
@@ -80,18 +80,18 @@
     <!-- Location for calendar event.  %1$s is the name of the pick up location -->
     <string name="calendar_car_location_TEMPLATE">%1$s</string>
     <!-- Part of the description, showing the itinerary #.  %s is the itinerary number, e.g. "Expedia Itinerary #: 3532532" -->
-    <string name="calendar_car_desc_itinerary_TEMPLATE">N° de voyage Expedia : %s</string>
+    <string name="calendar_desc_itinerary_TEMPLATE">N° de voyage {brand} : {itinerary}</string>
     <!-- Part of the description, showing a phone # for support.  %1$s is the local phone number and %2$s is for toll free no, e.g. "Expedia Customer Support: 222-222-2222 and 800-321-1111" -->
-    <string name="calendar_car_desc_support_TEMPLATE">Assistance clientèle Expedia : %1$s et %2$s</string>
+    <string name="calendar_desc_support_TEMPLATE">Assistance clientèle {brand} : {localphone} et {phone}</string>
 
     <!-- Label for hotel search toolbar -->
     <string name="hotel_toolbar_title">Recherche d\&apos;hôtels</string>
     <!-- Label for hotel suggestion -->
     <string name="search_location">Recherche de destination</string>
     <!-- Label for pickup location selector -->
-    <string name="pick_up_location">Lieu de prise en charge</string>
+    <string name="pick_up_location">Prise en charge</string>
     <!-- Label for car dropoff selector, indicates it cannot be different from pickup location -->
-    <string name="drop_off_location">Lieu de restitution</string>
+    <string name="drop_off_location">Restitution</string>
     <!-- Label for Car Search Screen header -->
     <string name="toolbar_search_cars">Recherche de véhicules</string>
     <!-- Label for Cars date button -->
@@ -101,9 +101,9 @@
     <!-- When user hasn't picked return date/time, we show something like: "Jan. 21, 2:00PM - Select return date" -->
     <string name="select_return_date_TEMPLATE">%1$s – Sélectionnez les dates de retour</string>
     <!-- Label for pick-up time picker -->
-    <string name="pick_up_time_label">Prise en charge du véhicule</string>
+    <string name="pick_up_time_label">Prise en charge</string>
     <!-- Label for drop-up time picker -->
-    <string name="drop_off_time_label">Restitution du véhicule</string>
+    <string name="drop_off_time_label">Restitution</string>
     <!-- Label for showing users that drop-off location has to be same as pick-up location -->
     <string name="drop_off_same_as_pick_up">Bientôt ! Nous allons ajouter dans une prochaine version l\&apos;option de locations de voiture avec restitution du véhicule dans une autre agence.</string>
     <!-- Car search error -->
@@ -859,7 +859,7 @@
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
-    <string name="facebook_weve_found_your_account">&lt;b&gt;%1$s&lt;/b&gt;, nous avons trouvé votre compte Expedia ! Veuillez saisir votre mot de passe Expedia ci-dessous afin de lier vos comptes Facebook et Expedia.</string>
+    <string name="facebook_weve_found_your_account_TEMPLATE">&lt;b&gt;{name}&lt;/b&gt;, nous avons trouvé votre compte {brand} ! Veuillez saisir votre mot de passe {brand} ci-dessous afin de lier vos comptes Facebook et {brand}.</string>
     <!-- Weve fetched your facebook info -->
     <string name="facebook_weve_fetched_your_info">&lt;b&gt;%1$s&lt;/b&gt;, nous avons chargé vos informations Facebook !</string>
     <!-- Sign in with facebook (button text) -->
@@ -875,7 +875,7 @@
     <!-- Sign failed try again. Note: the text "Country setting" is referring to the option from the settings page that is titled "Country" in the English translation. -->
     <string name="sign_in_failed_try_again">Connexion non réussie. Si votre adresse e-mail et votre mot de passe sont corrects, vérifiez et confirmez que votre paramètre Pays de l\&apos;appli est correct.</string>
     <!-- User needs to reset password -->
-    <string name="sign_in_reset_password">Vous devez créer une nouvelle connexion internationale pour tous les sites Expedia.&lt;br&gt;Veuillez réinitialiser votre mot de passe en utilisant le lien « Mot de passe oublié ? » situé ci-dessous.</string>
+    <string name="sign_in_reset_password_TEMPLATE">Vous devez créer une nouvelle connexion internationale pour tous les sites {brand}.&lt;br&gt;Veuillez réinitialiser votre mot de passe en utilisant le lien « Mot de passe oublié ? » situé ci-dessous.</string>
     <!-- Facebook connect password hint -->
     <string name="brand_password_hint_TEMPLATE">Mot de passe {brand}</string>
     <!-- Link accounts -->
@@ -887,7 +887,7 @@
     <!-- User Denied email permission Heading -->
     <string name="user_denied_permission_email_heading">Permission e-mail</string>
     <!-- User Denied email permission re-request message -->
-    <string name="user_denied_permission_email_message">Pour vous connecter à Facebook, nous avons besoin de la permission pour vérifier votre adresse e-mail. \n\nVeuillez appuyer sur le bouton Facebook ci-dessous pour accorder à Expedia la permission de vérifier votre adresse e-mail. Merci !</string>
+    <string name="user_denied_permission_email_message_TEMPLATE">Pour vous connecter à Facebook, nous avons besoin de la permission pour vérifier votre adresse e-mail. \n\nVeuillez appuyer sur le bouton Facebook ci-dessous pour accorder à {brand} la permission de vérifier votre adresse e-mail. Merci !</string>
     <!-- Linking your accounts -->
     <string name="linking_your_accounts">Liaison des comptes…</string>
     <!-- Sign In -->
@@ -1340,7 +1340,7 @@
     <string name="itin_card_details_expires">Expire fin</string>
     <string name="itin_card_details_guests">Voyageurs</string>
     <string name="itin_card_details_details">Informations additionnelles</string>
-    <string name="itin_card_details_pick_up">Prise en charge</string>
+    <string name="itin_card_details_pick_up">Départ</string>
     <string name="itin_card_details_drop_off">Retour</string>
     <!-- Tell users when they can pick up a rental car in three days -->
     <string name="itin_card_details_pick_up_three_days">Prise en charge dans 3 jours</string>
@@ -1436,7 +1436,7 @@
     <!-- Hotel phone number -->
     <string name="share_template_long_hotel_4_phone">Téléphone\n%s</string>
     <!-- App download link -->
-    <string name="share_template_long_ad">Réservez des hôtels et des billets d\&apos;avion. Consultez et partagez vos voyages. Téléchargez l\&apos;appli gratuite Expedia !\n%s</string>
+    <string name="share_long_ad_TEMPLATE">Réservez des hôtels et des billets d\&apos;avion. Consultez et partagez vos voyages. Téléchargez l\&apos;appli {brand} gratuite dès aujourd\&apos;hui !\n{appinfourl}</string>
     <!-- 1: city 2: date string -->
     <string name="share_template_subject_flight">Le %2$s, je pars pour %1$s</string>
     <!-- 1: travelerName 2: city 3: date string -->
@@ -1532,7 +1532,7 @@
 
     <!-- Flights -->
     <!-- Label for Flight Search in task manager -->
-    <string name="Expedia_Flights">Vols Expedia</string>
+    <string name="Flights_TEMPLATE">Vols {brand}</string>
     <!-- Label for flight search part of app -->
     <string name="search_flights">Rechercher un vol</string>
     <!-- Hint in edit text that indicates one should enter a departure airport -->
@@ -2847,7 +2847,7 @@
     <!-- Label for "Expedia website" button in info page -->
     <string name="website_TEMPLATE">Site Internet {brand}</string>
     <!-- Label for "app support" button in info page -->
-    <string name="app_support_TEMPLATE">Assistance pour l\&apos;app</string>
+    <string name="app_support">Assistance pour l\&apos;app</string>
     <!-- Label for link to terms and conditions -->
     <string name="info_label_terms_conditions">Conditions d\&apos;utilisation</string>
     <!-- Label for link to privacy policy -->
@@ -2975,7 +2975,7 @@
     <!-- The hotel booking failed -->
     <string name="e3_error_checkout_booking_failed">Une erreur nous empêche de finaliser votre réservation. Veuillez réessayer.</string>
     <!-- The hotel booking succeeded, but there were some errors. Likely an email was not sent -->
-    <string name="e3_error_checkout_booking_succeeded_with_errors">Votre hôtel a bien été réservé ! Veuillez contacter le service clients Expedia si vous avez besoin d\&apos;un voyage immédiatement.</string>
+    <string name="e3_error_checkout_booking_succeeded_with_errors_TEMPLATE">Votre hôtel a bien été réservé ! Veuillez contacter l\&apos;assistance clientèle {brand} si vous avez besoin d\&apos;un voyage immédiatement.</string>
     <!-- The hotel room is no longer available -->
     <string name="e3_error_checkout_hotel_room_unavailable">Désolés, la chambre que vous avez demandée n\&apos;est plus disponible.</string>
     <!-- There is invalid input in the hotel booking form. Please fix it. -->
@@ -3000,7 +3000,7 @@
     <string name="e3_error_hotel_offers_hotel_offer_unavailable">Désolés ! La promotion pour cette chambre a expiré, mais d\&apos;autres offres sont disponibles.</string>
     <string name="e3_error_hotel_offers_hotel_room_unavailable">Désolés, la chambre que vous avez demandée n\&apos;est plus disponible.</string>
     <!-- For some reason the API failed and we couldn't complete the search -->
-    <string name="e3_error_hotel_offers_hotel_service_failure">Désolés, nous n\&apos;avons pas pu vous connecter à Expedia. Veuillez réessayer.</string>
+    <string name="e3_error_hotel_offers_hotel_service_failure_TEMPLATE">Désolés, nous n\&apos;avons pas pu vous connecter à {brand}. Veuillez réessayer.</string>
     <!-- There are no longer any rooms for the hotel offer -->
     <string name="e3_error_hotel_offers_invalid_input">Désolés ! La promotion pour cette chambre a expiré, mais d\&apos;autres offres sont disponibles.</string>
     <!-- There are no longer any rooms for the hotel offer -->
