--- a/project/src/main/res/values-it/strings.xml
+++ b/project/src/main/res/values-it/strings.xml
@@ -80,9 +80,9 @@
     <!-- Location for calendar event.  %1$s is the name of the pick up location -->
     <string name="calendar_car_location_TEMPLATE">%1$s</string>
     <!-- Part of the description, showing the itinerary #.  %s is the itinerary number, e.g. "Expedia Itinerary #: 3532532" -->
-    <string name="calendar_car_desc_itinerary_TEMPLATE">Itinerario Expedia n.: %s</string>
+    <string name="calendar_desc_itinerary_TEMPLATE">{brand} Itinerario n.: {itinerary}</string>
     <!-- Part of the description, showing a phone # for support.  %1$s is the local phone number and %2$s is for toll free no, e.g. "Expedia Customer Support: 222-222-2222 and 800-321-1111" -->
-    <string name="calendar_car_desc_support_TEMPLATE">Supporto clienti Expedia: %1$s e %2$s</string>
+    <string name="calendar_desc_support_TEMPLATE">{brand} Supporto clienti : {localphone} e {phone}</string>
 
     <!-- Label for hotel search toolbar -->
     <string name="hotel_toolbar_title">Cerca hotel</string>
@@ -859,7 +859,7 @@
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
-    <string name="facebook_weve_found_your_account">Ciao &lt;b&gt;%1$s&lt;/b&gt;, abbiamo trovato il tuo account Expedia! Inserisci la tua password Expedia in basso per collegare i tuoi account Facebook e Expedia.</string>
+    <string name="facebook_weve_found_your_account_TEMPLATE">Ciao &lt;b&gt;{name}&lt;/b&gt;, abbiamo trovato il tuo account {brand} Inserisci la tua password {brand} in basso per collegare i tuoi account Facebook e {brand}.</string>
     <!-- Weve fetched your facebook info -->
     <string name="facebook_weve_fetched_your_info">Ciao &lt;b&gt;%1$s&lt;/b&gt;, abbiamo caricato i tuoi dati Facebook!</string>
     <!-- Sign in with facebook (button text) -->
@@ -875,7 +875,7 @@
     <!-- Sign failed try again. Note: the text "Country setting" is referring to the option from the settings page that is titled "Country" in the English translation. -->
     <string name="sign_in_failed_try_again">Accesso non riuscito. Se il tuo indirizzo e-mail e la password sono corretti, verifica le impostazioni del paese della tua app.</string>
     <!-- User needs to reset password -->
-    <string name="sign_in_reset_password">Ti chiediamo di creare un nuovo account globale per tutti i siti di Expedia.&lt;br&gt;Reimposta la tua password cliccando sul link "Hai dimenticato la password?" di seguito.</string>
+    <string name="sign_in_reset_password_TEMPLATE">Ti chiediamo di creare un nuovo account globale per tutti i siti di {brand}.&lt;br&gt;Reimposta la tua password cliccando sul link "Hai dimenticato la password?" di seguito.</string>
     <!-- Facebook connect password hint -->
     <string name="brand_password_hint_TEMPLATE">Password {brand}</string>
     <!-- Link accounts -->
@@ -887,7 +887,7 @@
     <!-- User Denied email permission Heading -->
     <string name="user_denied_permission_email_heading">Autorizzazione e-mail</string>
     <!-- User Denied email permission re-request message -->
-    <string name="user_denied_permission_email_message">Per effettuare l\&apos;accesso tramite Facebook, abbiamo bisogno dell\&apos;autorizzazione a verificare il tuo indirizzo e-mail. \n\nClicca sul pulsante Facebook in basso per autorizzare Expedia a verificare il tuo indirizzo e-mail. Grazie!</string>
+    <string name="user_denied_permission_email_message_TEMPLATE">Per effettuare l\&apos;accesso tramite Facebook, abbiamo bisogno dell\&apos;autorizzazione a verificare il tuo indirizzo e-mail. \n\n{brand}Clicca sul pulsante Facebook in basso per autorizzare a verificare il tuo indirizzo e-mail. Grazie!</string>
     <!-- Linking your accounts -->
     <string name="linking_your_accounts">Stiamo collegando il tuo account…</string>
     <!-- Sign In -->
@@ -1436,7 +1436,7 @@
     <!-- Hotel phone number -->
     <string name="share_template_long_hotel_4_phone">Telefono\n%s</string>
     <!-- App download link -->
-    <string name="share_template_long_ad">Prenota hotel, voli e visualizza e condividi i tuoi itinerari. Scarica subito l\&apos;app Expedia per dispositivi mobili.\n%s</string>
+    <string name="share_long_ad_TEMPLATE">Prenota hotel, voli e visualizza e condividi i tuoi itinerari. Scarica subito l\&apos;app gratuita di {brand} per dispositivi mobili.\n{appinfourl}</string>
     <!-- 1: city 2: date string -->
     <string name="share_template_subject_flight">Volerò a %1$s in data %2$s</string>
     <!-- 1: travelerName 2: city 3: date string -->
@@ -1532,7 +1532,7 @@
 
     <!-- Flights -->
     <!-- Label for Flight Search in task manager -->
-    <string name="Expedia_Flights">Voli Expedia</string>
+    <string name="Flights_TEMPLATE">{brand} voli</string>
     <!-- Label for flight search part of app -->
     <string name="search_flights">Cerca voli</string>
     <!-- Hint in edit text that indicates one should enter a departure airport -->
@@ -2847,7 +2847,7 @@
     <!-- Label for "Expedia website" button in info page -->
     <string name="website_TEMPLATE">Sito web {brand}</string>
     <!-- Label for "app support" button in info page -->
-    <string name="app_support_TEMPLATE">Assistenza app</string>
+    <string name="app_support">Assistenza app</string>
     <!-- Label for link to terms and conditions -->
     <string name="info_label_terms_conditions">Termini e condizioni</string>
     <!-- Label for link to privacy policy -->
@@ -2975,7 +2975,7 @@
     <!-- The hotel booking failed -->
     <string name="e3_error_checkout_booking_failed">Un errore ha impedito il completamento della prenotazione. Riprova.</string>
     <!-- The hotel booking succeeded, but there were some errors. Likely an email was not sent -->
-    <string name="e3_error_checkout_booking_succeeded_with_errors">La tua prenotazione hotel è stata effettuata! Se ti serve immediatamente un itinerario, contatta il supporto clienti di Expedia.</string>
+    <string name="e3_error_checkout_booking_succeeded_with_errors_TEMPLATE">Hai prenotato il tuo hotel! Se ti serve immediatamente un itinerario, contatta il Supporto clienti di {brand}.</string>
     <!-- The hotel room is no longer available -->
     <string name="e3_error_checkout_hotel_room_unavailable">Siamo spiacenti, ma la camera richiesta non è più disponibile.</string>
     <!-- There is invalid input in the hotel booking form. Please fix it. -->
@@ -2998,9 +2998,9 @@
     <!-- HotelOffers API method -->
     <!-- The hotel offer is no longer available -->
     <string name="e3_error_hotel_offers_hotel_offer_unavailable">Siamo spiacenti. La promozione per questa camera è scaduta, ma sono disponibili altre offerte.</string>
-    <string name="e3_error_hotel_offers_hotel_room_unavailable">La camera richiesta non è più disponibile.</string>
+    <string name="e3_error_hotel_offers_hotel_room_unavailable">Siamo spiacenti, ma la camera richiesta non è più disponibile.</string>
     <!-- For some reason the API failed and we couldn't complete the search -->
-    <string name="e3_error_hotel_offers_hotel_service_failure">Non è stato possibile stabilire un collegamento con Expedia. Riprova.</string>
+    <string name="e3_error_hotel_offers_hotel_service_failure_TEMPLATE">Non è stato possibile stabilire un collegamento con {brand}. Riprova.</string>
     <!-- There are no longer any rooms for the hotel offer -->
     <string name="e3_error_hotel_offers_invalid_input">Siamo spiacenti. La promozione per questa camera è scaduta, ma sono disponibili altre offerte.</string>
     <!-- There are no longer any rooms for the hotel offer -->
