--- a/project/src/main/res/values-ko/strings.xml
+++ b/project/src/main/res/values-ko/strings.xml
@@ -80,9 +80,9 @@
     <!-- Location for calendar event.  %1$s is the name of the pick up location -->
     <string name="calendar_car_location_TEMPLATE">%1$s</string>
     <!-- Part of the description, showing the itinerary #.  %s is the itinerary number, e.g. "Expedia Itinerary #: 3532532" -->
-    <string name="calendar_car_desc_itinerary_TEMPLATE">익스피디아 일정 번호: %s</string>
+    <string name="calendar_desc_itinerary_TEMPLATE">{brand} 일정 번호: {itinerary}</string>
     <!-- Part of the description, showing a phone # for support.  %1$s is the local phone number and %2$s is for toll free no, e.g. "Expedia Customer Support: 222-222-2222 and 800-321-1111" -->
-    <string name="calendar_car_desc_support_TEMPLATE">익스피디아 고객 지원: %1$s 및 %2$s</string>
+    <string name="calendar_desc_support_TEMPLATE">{brand} 고객 지원: {localphone} 및 {phone}</string>
 
     <!-- Label for hotel search toolbar -->
     <string name="hotel_toolbar_title">호텔 검색</string>
@@ -859,7 +859,7 @@
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
-    <string name="facebook_weve_found_your_account">&lt;b&gt;%1$s&lt;/b&gt; 님! 익스피디아 계정을 갖고 계신 것 같네요. Facebook과 익스피디아 계정을 연결하려면 아래에 익스피디아 비밀번호를 입력해 주세요.</string>
+    <string name="facebook_weve_found_your_account_TEMPLATE">&lt;b&gt;{name}&lt;/b&gt; 님, 고객님의 {brand} 계정을 찾은 것 같아요! Facebook과 {brand} 계정을 연결하려면 아래에 {brand} 비밀번호를 입력해 주세요.</string>
     <!-- Weve fetched your facebook info -->
     <string name="facebook_weve_fetched_your_info">&lt;b&gt;%1$s&lt;/b&gt; 님! 고객님의 Facebook 정보를 가져왔습니다.</string>
     <!-- Sign in with facebook (button text) -->
@@ -875,7 +875,7 @@
     <!-- Sign failed try again. Note: the text "Country setting" is referring to the option from the settings page that is titled "Country" in the English translation. -->
     <string name="sign_in_failed_try_again">로그인하지 못했습니다. 이메일과 비밀번호가 올바른 경우 앱의 국가 설정이 올바른지 확인해 주세요.</string>
     <!-- User needs to reset password -->
-    <string name="sign_in_reset_password">모든 익스피디아 사이트에 사용할 새로운 계정을 만들어 주세요.&lt;br&gt;아래의 ‘비밀번호를 잊으셨나요?\&apos; 링크를 사용하여 비밀번호를 재설정해 주세요.</string>
+    <string name="sign_in_reset_password_TEMPLATE">모든 {brand} 사이트에 사용할 새로운 글로벌 로그인을 생성해 주셔야 합니다.&lt;br&gt;아래의 ‘비밀번호를 잊으셨나요?\&apos; 링크를 사용하여 비밀번호를 재설정해 주세요.</string>
     <!-- Facebook connect password hint -->
     <string name="brand_password_hint_TEMPLATE">{brand} 비밀번호</string>
     <!-- Link accounts -->
@@ -887,7 +887,7 @@
     <!-- User Denied email permission Heading -->
     <string name="user_denied_permission_email_heading">이메일 권한</string>
     <!-- User Denied email permission re-request message -->
-    <string name="user_denied_permission_email_message">Facebook 계정으로 로그인하려면 저희에게 고객님의 이메일 주소를 확인할 권한을 주셔야 합니다. \n\n아래의 Facebook 버튼을 눌러 익스피디아에 고객님 이메일 주소를 확인할 권한을 주세요. 감사합니다!</string>
+    <string name="user_denied_permission_email_message_TEMPLATE">Facebook 계정으로 로그인하려면 저희에게 고객님의 이메일 주소를 확인할 권한을 주셔야 합니다. \n\n아래의 Facebook 버튼을 눌러 {brand}에 고객님 이메일 주소를 확인할 권한을 주세요. 감사합니다!</string>
     <!-- Linking your accounts -->
     <string name="linking_your_accounts">계정 연결 중…</string>
     <!-- Sign In -->
@@ -1436,7 +1436,7 @@
     <!-- Hotel phone number -->
     <string name="share_template_long_hotel_4_phone">전화:\n%s</string>
     <!-- App download link -->
-    <string name="share_template_long_ad">호텔과 항공을 예약하고 일정을 확인 및 공유하세요. 오늘 바로 익스피디아 모바일 앱을 다운로드하세요.\n%s</string>
+    <string name="share_long_ad_TEMPLATE">호텔과 항공을 예약하고 일정을 확인 및 공유하세요. 오늘 바로 무료 {brand} 앱을 다운로드하세요.\n{appinfourl}</string>
     <!-- 1: city 2: date string -->
     <string name="share_template_subject_flight">항공편으로 %1$s에 가요!(%2$s)</string>
     <!-- 1: travelerName 2: city 3: date string -->
@@ -1532,7 +1532,7 @@
 
     <!-- Flights -->
     <!-- Label for Flight Search in task manager -->
-    <string name="Expedia_Flights">익스피디아 항공</string>
+    <string name="Flights_TEMPLATE">{brand} 항공편</string>
     <!-- Label for flight search part of app -->
     <string name="search_flights">항공편 검색</string>
     <!-- Hint in edit text that indicates one should enter a departure airport -->
@@ -2847,7 +2847,7 @@
     <!-- Label for "Expedia website" button in info page -->
     <string name="website_TEMPLATE">{brand} 웹사이트</string>
     <!-- Label for "app support" button in info page -->
-    <string name="app_support_TEMPLATE">앱 지원</string>
+    <string name="app_support">앱 기술 지원</string>
     <!-- Label for link to terms and conditions -->
     <string name="info_label_terms_conditions">이용약관</string>
     <!-- Label for link to privacy policy -->
@@ -2975,7 +2975,7 @@
     <!-- The hotel booking failed -->
     <string name="e3_error_checkout_booking_failed">오류가 발생하여 예약을 완료하지 못했습니다. 다시 시도해 주세요.</string>
     <!-- The hotel booking succeeded, but there were some errors. Likely an email was not sent -->
-    <string name="e3_error_checkout_booking_succeeded_with_errors">호텔 예약이 완료되었습니다! 여행 일정이 당장 필요하시면 익스피디아 고객 지원에 연락해 주세요.</string>
+    <string name="e3_error_checkout_booking_succeeded_with_errors_TEMPLATE">호텔 예약이 완료되었습니다! 일정이 즉시 필요하시면 {brand} 고객 지원에 전화해 주세요.</string>
     <!-- The hotel room is no longer available -->
     <string name="e3_error_checkout_hotel_room_unavailable">죄송합니다. 요청하신 객실은 더 이상 이용하실 수 없습니다.</string>
     <!-- There is invalid input in the hotel booking form. Please fix it. -->
@@ -3000,7 +3000,7 @@
     <string name="e3_error_hotel_offers_hotel_offer_unavailable">죄송합니다. 이 객실에 대한 프로모션은 끝났지만 다른 프로모션이 진행 중입니다. 확인해 보세요.</string>
     <string name="e3_error_hotel_offers_hotel_room_unavailable">죄송합니다. 요청하신 객실은 더 이상 이용하실 수 없습니다.</string>
     <!-- For some reason the API failed and we couldn't complete the search -->
-    <string name="e3_error_hotel_offers_hotel_service_failure">죄송합니다. 익스피디아에 연결할 수 없습니다. 다시 시도해 주세요.</string>
+    <string name="e3_error_hotel_offers_hotel_service_failure_TEMPLATE">죄송합니다. {brand}에 연결할 수 없습니다. 다시 시도해 주세요.</string>
     <!-- There are no longer any rooms for the hotel offer -->
     <string name="e3_error_hotel_offers_invalid_input">죄송합니다. 이 객실에 대한 프로모션은 끝났지만 다른 프로모션이 진행 중입니다. 확인해 보세요.</string>
     <!-- There are no longer any rooms for the hotel offer -->
