--- a/project/src/main/res/values-nb/strings.xml
+++ b/project/src/main/res/values-nb/strings.xml
@@ -80,9 +80,9 @@
     <!-- Location for calendar event.  %1$s is the name of the pick up location -->
     <string name="calendar_car_location_TEMPLATE">%1$s</string>
     <!-- Part of the description, showing the itinerary #.  %s is the itinerary number, e.g. "Expedia Itinerary #: 3532532" -->
-    <string name="calendar_car_desc_itinerary_TEMPLATE">Expedia-reiserutenummer: %s</string>
+    <string name="calendar_desc_itinerary_TEMPLATE">{brand}-reiserutenummer: {itinerary}</string>
     <!-- Part of the description, showing a phone # for support.  %1$s is the local phone number and %2$s is for toll free no, e.g. "Expedia Customer Support: 222-222-2222 and 800-321-1111" -->
-    <string name="calendar_car_desc_support_TEMPLATE">Expedia kundeservice: %1$s og %2$s</string>
+    <string name="calendar_desc_support_TEMPLATE">{brand}s kundeservice: {localphone} og {phone}</string>
 
     <!-- Label for hotel search toolbar -->
     <string name="hotel_toolbar_title">Søk etter hoteller</string>
@@ -859,7 +859,7 @@
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
-    <string name="facebook_weve_found_your_account">Hei, &lt;b&gt;%1$s&lt;/b&gt;! Det ser ut som vi har funnet Expedia-kontoen din! Vennligst skriv inn Expedia-passordet ditt nedenfor for å koble Facebook-kontoen din opp mot Expedia-kontoen din.</string>
+    <string name="facebook_weve_found_your_account_TEMPLATE">Hei, &lt;b&gt;{name}&lt;/b&gt;! Det ser ut til at vi har funnet {brand}-kontoen din! Vennligst oppgi passordet ditt for {brand} under for å koble Facebook-kontoen din opp mot {brand}-kontoen din.</string>
     <!-- Weve fetched your facebook info -->
     <string name="facebook_weve_fetched_your_info">Hei, &lt;b&gt;%1$s&lt;/b&gt;! Vi har hentet Facebook-informasjonen din!</string>
     <!-- Sign in with facebook (button text) -->
@@ -875,7 +875,7 @@
     <!-- Sign failed try again. Note: the text "Country setting" is referring to the option from the settings page that is titled "Country" in the English translation. -->
     <string name="sign_in_failed_try_again">Pålogging feilet. Hvis e-postadressen og passordet er korrekt, kan det være lurt å sjekke at landsinnstillingen på appen er korrekt.</string>
     <!-- User needs to reset password -->
-    <string name="sign_in_reset_password">Du må opprette en ny, internasjonal pålogging for alle Expedias nettsider.&lt;br&gt;Nullstill passordet ditt ved å klikke på "Glemt passordet ditt?" nedenfor.</string>
+    <string name="sign_in_reset_password_TEMPLATE">Du må opprette en ny, internasjonal pålogging for alle nettstedene til {brand}.&lt;br&gt;Nullstill passordet ditt ved å klikke på "Glemt passordet ditt?" nedenfor.</string>
     <!-- Facebook connect password hint -->
     <string name="brand_password_hint_TEMPLATE">{brand}-passord</string>
     <!-- Link accounts -->
@@ -887,7 +887,7 @@
     <!-- User Denied email permission Heading -->
     <string name="user_denied_permission_email_heading">E-post-tillatelse</string>
     <!-- User Denied email permission re-request message -->
-    <string name="user_denied_permission_email_message">For at du skal kunne logge på med Facebook ber vi om godkjennelse til å verifisere din e-postadresse. \n\nTrykk på Facebook-knappen nedenfor for å gi Expedia tillatelse til å verifisere din e-postadresse. Takk!</string>
+    <string name="user_denied_permission_email_message_TEMPLATE">For at du skal kunne logge på med Facebook ber vi om din tillatelse til å verifisere e-postadressen din. \n\nTrykk på Facebook-knappen nedenfor for å gi {brand} tillatelse til å verifisere e-postadressen din. Takk!</string>
     <!-- Linking your accounts -->
     <string name="linking_your_accounts">Kobler kontoene dine opp mot hverandre…</string>
     <!-- Sign In -->
@@ -1436,7 +1436,7 @@
     <!-- Hotel phone number -->
     <string name="share_template_long_hotel_4_phone">Telefonnr. \n%s</string>
     <!-- App download link -->
-    <string name="share_template_long_ad">Bestill hotell og fly, eller se og del reiserutene dine. Last ned Expedias mobil-app i dag, helt gratis.\n%s</string>
+    <string name="share_long_ad_TEMPLATE">Bestill hoteller og fly, eller se og del reiserutene dine. Last ned {brand}s gratis mobilapp i dag.\n{appinfourl}</string>
     <!-- 1: city 2: date string -->
     <string name="share_template_subject_flight">Jeg skal fly til %1$s den %2$s</string>
     <!-- 1: travelerName 2: city 3: date string -->
@@ -1532,7 +1532,7 @@
 
     <!-- Flights -->
     <!-- Label for Flight Search in task manager -->
-    <string name="Expedia_Flights">Expedia Flights</string>
+    <string name="Flights_TEMPLATE">{brand}-flyvninger</string>
     <!-- Label for flight search part of app -->
     <string name="search_flights">Søk etter flyvninger</string>
     <!-- Hint in edit text that indicates one should enter a departure airport -->
@@ -2847,7 +2847,7 @@
     <!-- Label for "Expedia website" button in info page -->
     <string name="website_TEMPLATE">{brand}Nettsted</string>
     <!-- Label for "app support" button in info page -->
-    <string name="app_support_TEMPLATE">App-støtte</string>
+    <string name="app_support">App-støtte</string>
     <!-- Label for link to terms and conditions -->
     <string name="info_label_terms_conditions">Vilkår</string>
     <!-- Label for link to privacy policy -->
@@ -2975,7 +2975,7 @@
     <!-- The hotel booking failed -->
     <string name="e3_error_checkout_booking_failed">En feil forhindret oss fra å fullføre bestillingen din. Prøv på nytt.</string>
     <!-- The hotel booking succeeded, but there were some errors. Likely an email was not sent -->
-    <string name="e3_error_checkout_booking_succeeded_with_errors">Bestillingen var vellykket! Har du behov for en reiserute umiddelbart, kan du ringe Expedias kundestøtte.</string>
+    <string name="e3_error_checkout_booking_succeeded_with_errors_TEMPLATE">Bestillingen var vellykket! Har du behov for en reiserute umiddelbart, kan du ringe {brand}s kundestøtte.</string>
     <!-- The hotel room is no longer available -->
     <string name="e3_error_checkout_hotel_room_unavailable">Beklager, rommet du ba om er ikke lenger tilgjengelig på appen vår.</string>
     <!-- There is invalid input in the hotel booking form. Please fix it. -->
@@ -3000,7 +3000,7 @@
     <string name="e3_error_hotel_offers_hotel_offer_unavailable">Beklager, kampanjen for dette rommet er avsluttet, men det finnes andre tilgjengelige tilbud.</string>
     <string name="e3_error_hotel_offers_hotel_room_unavailable">Beklager, rommet du ba om er ikke lenger tilgjengelig.</string>
     <!-- For some reason the API failed and we couldn't complete the search -->
-    <string name="e3_error_hotel_offers_hotel_service_failure">Beklager, vi kunne ikke koble til Expedia. Prøv på nytt.</string>
+    <string name="e3_error_hotel_offers_hotel_service_failure_TEMPLATE">Beklager, vi kunne ikke koble til {brand}. Prøv på nytt.</string>
     <!-- There are no longer any rooms for the hotel offer -->
     <string name="e3_error_hotel_offers_invalid_input">Beklager, kampanjen for dette rommet er avsluttet, men det finnes andre tilgjengelige tilbud.</string>
     <!-- There are no longer any rooms for the hotel offer -->
