--- a/project/src/main/res/values-nl/strings.xml
+++ b/project/src/main/res/values-nl/strings.xml
@@ -80,9 +80,9 @@
     <!-- Location for calendar event.  %1$s is the name of the pick up location -->
     <string name="calendar_car_location_TEMPLATE">%1$s</string>
     <!-- Part of the description, showing the itinerary #.  %s is the itinerary number, e.g. "Expedia Itinerary #: 3532532" -->
-    <string name="calendar_car_desc_itinerary_TEMPLATE">Expedia reisplannr.: %s</string>
+    <string name="calendar_desc_itinerary_TEMPLATE">{brand}-reisplannr.: {itinerary}</string>
     <!-- Part of the description, showing a phone # for support.  %1$s is the local phone number and %2$s is for toll free no, e.g. "Expedia Customer Support: 222-222-2222 and 800-321-1111" -->
-    <string name="calendar_car_desc_support_TEMPLATE">Expedia klantenservice: %1$s en %2$s</string>
+    <string name="calendar_desc_support_TEMPLATE">{brand}-klantenservice: {localphone} en {phone}</string>
 
     <!-- Label for hotel search toolbar -->
     <string name="hotel_toolbar_title">Hotels zoeken</string>
@@ -859,7 +859,7 @@
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
-    <string name="facebook_weve_found_your_account">Beste &lt;b&gt;%1$s&lt;/b&gt;, we hebben je Expedia-account gevonden! Voer hieronder het wachtwoord van je Expedia-account in om het met je Facebook-account te kunnen koppelen.</string>
+    <string name="facebook_weve_found_your_account_TEMPLATE">Beste &lt;b&gt;{name}&lt;/b&gt;, we hebben je {brand}-account gevonden! Voer hieronder het wachtwoord van je {brand}-account in om je Facebook- en {brand}-accounts te koppelen.</string>
     <!-- Weve fetched your facebook info -->
     <string name="facebook_weve_fetched_your_info">Beste &lt;b&gt;%1$s&lt;/b&gt;, we hebben je gegevens van Facebook geladen!</string>
     <!-- Sign in with facebook (button text) -->
@@ -875,7 +875,7 @@
     <!-- Sign failed try again. Note: the text "Country setting" is referring to the option from the settings page that is titled "Country" in the English translation. -->
     <string name="sign_in_failed_try_again">Aanmelden mislukt. Bevestig of de Landinstellingen van je app kloppen als je e-mail en wachtwoord correct zijn.</string>
     <!-- User needs to reset password -->
-    <string name="sign_in_reset_password">We hebben jouw hulp nodig om nieuwe, universele aanmeldingsinfo voor alle Expedia-sites te creëren.&lt;br&gt;Stel je wachtwoord opnieuw in via de onderstaande link \&apos;Je wachtwoord vergeten?\&apos;.</string>
+    <string name="sign_in_reset_password_TEMPLATE">We hebben jouw hulp nodig om nieuwe, universele aanmeldingsinfo voor alle {brand}-sites te creëren.&lt;br&gt;Stel je wachtwoord opnieuw in via de onderstaande link \&apos;Je wachtwoord vergeten?\&apos;.</string>
     <!-- Facebook connect password hint -->
     <string name="brand_password_hint_TEMPLATE">{brand}-wachtwoord</string>
     <!-- Link accounts -->
@@ -887,7 +887,7 @@
     <!-- User Denied email permission Heading -->
     <string name="user_denied_permission_email_heading">E-mailtoestemming</string>
     <!-- User Denied email permission re-request message -->
-    <string name="user_denied_permission_email_message">Om je te kunnen aanmelden bij Facebook, hebben wij je toestemming nodig om je e-mailadres te controleren. \n\nTik op de onderstaande Facebook-knop om Expedia toestemming te geven je e-mailadres te controleren. Hartelijk bedankt.</string>
+    <string name="user_denied_permission_email_message_TEMPLATE">Om je te kunnen aanmelden bij Facebook, hebben wij je toestemming nodig om je e-mailadres te controleren. \n\n{brand}Tik op de onderstaande Facebook-knop om toestemming te geven je e-mailadres te controleren. Hartelijk bedankt.</string>
     <!-- Linking your accounts -->
     <string name="linking_your_accounts">Accounts aan het koppelen…</string>
     <!-- Sign In -->
@@ -1436,7 +1436,7 @@
     <!-- Hotel phone number -->
     <string name="share_template_long_hotel_4_phone">Telefoon\n%s</string>
     <!-- App download link -->
-    <string name="share_template_long_ad">Boek hotels, vluchten en bekijk &amp; deel je reisplannen. Download vandaag nog de gratis Expedia mobiele app.\n%s</string>
+    <string name="share_long_ad_TEMPLATE">Boek hotels, vluchten en bekijk &amp; deel je reisplannen. Download vandaag nog de gratis {brand} App.\n{appinfourl}</string>
     <!-- 1: city 2: date string -->
     <string name="share_template_subject_flight">Ik vlieg op %2$s naar %1$s</string>
     <!-- 1: travelerName 2: city 3: date string -->
@@ -1532,7 +1532,7 @@
 
     <!-- Flights -->
     <!-- Label for Flight Search in task manager -->
-    <string name="Expedia_Flights">Expedia Vluchten</string>
+    <string name="Flights_TEMPLATE">{brand}-vluchten</string>
     <!-- Label for flight search part of app -->
     <string name="search_flights">Zoeken naar een vlucht</string>
     <!-- Hint in edit text that indicates one should enter a departure airport -->
@@ -2847,7 +2847,7 @@
     <!-- Label for "Expedia website" button in info page -->
     <string name="website_TEMPLATE">{brand}-website</string>
     <!-- Label for "app support" button in info page -->
-    <string name="app_support_TEMPLATE">App-support</string>
+    <string name="app_support">App-support</string>
     <!-- Label for link to terms and conditions -->
     <string name="info_label_terms_conditions">Algemene Voorwaarden</string>
     <!-- Label for link to privacy policy -->
@@ -2975,7 +2975,7 @@
     <!-- The hotel booking failed -->
     <string name="e3_error_checkout_booking_failed">Door een fout konden we je boeking niet afronden. Probeer het opnieuw.</string>
     <!-- The hotel booking succeeded, but there were some errors. Likely an email was not sent -->
-    <string name="e3_error_checkout_booking_succeeded_with_errors">Je hebt je boeking bij dit hotel voltooid! Bel de Expedia klantenservice als je onmiddellijk een reisplan nodig hebt.</string>
+    <string name="e3_error_checkout_booking_succeeded_with_errors_TEMPLATE">Je hebt je reservering bij dit hotel geboekt! Als je onmiddellijk een reisplan nodig hebt, bel dan de {brand}-klantenservice.</string>
     <!-- The hotel room is no longer available -->
     <string name="e3_error_checkout_hotel_room_unavailable">Het spijt ons, maar de kamer waar je naar zocht is niet meer beschikbaar op Expedia.</string>
     <!-- There is invalid input in the hotel booking form. Please fix it. -->
@@ -3000,7 +3000,7 @@
     <string name="e3_error_hotel_offers_hotel_offer_unavailable">Het spijt ons! De deal op deze kamer is niet langer geldig, maar we hebben nog andere deals.</string>
     <string name="e3_error_hotel_offers_hotel_room_unavailable">Het spijt ons, maar de kamer waar je naar zocht is niet meer beschikbaar op Expedia.</string>
     <!-- For some reason the API failed and we couldn't complete the search -->
-    <string name="e3_error_hotel_offers_hotel_service_failure">Het spijt ons, maar we konden geen verbinding maken met Expedia. Probeer het opnieuw.</string>
+    <string name="e3_error_hotel_offers_hotel_service_failure_TEMPLATE">Sorry, maar we konden geen verbinding maken met {brand}. Probeer het opnieuw.</string>
     <!-- There are no longer any rooms for the hotel offer -->
     <string name="e3_error_hotel_offers_invalid_input">Het spijt ons! De deal op deze kamer is niet langer geldig, maar we hebben nog andere deals.</string>
     <!-- There are no longer any rooms for the hotel offer -->
