--- a/project/src/main/res/values-zh-rTW/strings.xml
+++ b/project/src/main/res/values-zh-rTW/strings.xml
@@ -80,9 +80,9 @@
     <!-- Location for calendar event.  %1$s is the name of the pick up location -->
     <string name="calendar_car_location_TEMPLATE">%1$s</string>
     <!-- Part of the description, showing the itinerary #.  %s is the itinerary number, e.g. "Expedia Itinerary #: 3532532" -->
-    <string name="calendar_car_desc_itinerary_TEMPLATE">Expedia 行程編號：%s</string>
+    <string name="calendar_desc_itinerary_TEMPLATE">{brand} 行程編號：{itinerary}</string>
     <!-- Part of the description, showing a phone # for support.  %1$s is the local phone number and %2$s is for toll free no, e.g. "Expedia Customer Support: 222-222-2222 and 800-321-1111" -->
-    <string name="calendar_car_desc_support_TEMPLATE">Expedia 客服中心：%1$s 及 %2$s</string>
+    <string name="calendar_desc_support_TEMPLATE">{brand} 客戶支援：{localphone} 及 {phone}</string>
 
     <!-- Label for hotel search toolbar -->
     <string name="hotel_toolbar_title">搜尋飯店</string>
@@ -859,7 +859,7 @@
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
-    <string name="facebook_weve_found_your_account">&lt;b&gt;%1$s&lt;/b&gt;您好，我們找到了您的 Expedia 帳戶。請在下方輸入您的 Expedia 密碼，以便將您的 Facebook 帳戶和 Expedia 帳戶連結。</string>
+    <string name="facebook_weve_found_your_account_TEMPLATE">&lt;b&gt;{name}&lt;/b&gt;您好，我們找到了您的 {brand} 帳戶。如需將您的 Facebook 帳戶與 {brand} 帳戶連結，請在下方輸入您的 {brand} 密碼。</string>
     <!-- Weve fetched your facebook info -->
     <string name="facebook_weve_fetched_your_info">&lt;b&gt;%1$s&lt;/b&gt;您好，我們已經載入您的 Facebook 資訊。</string>
     <!-- Sign in with facebook (button text) -->
@@ -875,7 +875,7 @@
     <!-- Sign failed try again. Note: the text "Country setting" is referring to the option from the settings page that is titled "Country" in the English translation. -->
     <string name="sign_in_failed_try_again">無法失敗。如果您的電子郵件和密碼是正確的，請確認您 App 的國家設定是否正確。</string>
     <!-- User needs to reset password -->
-    <string name="sign_in_reset_password">您必須新建一個所有 Expedia 網站皆適用的國際登入帳戶。&lt;br&gt;請使用下方的「忘記密碼」連結來重設您的密碼。</string>
+    <string name="sign_in_reset_password_TEMPLATE">您必須建立一個新的、適用於所有 {brand} 網站的全球登入帳戶。&lt;br&gt;請使用下方的「忘記密碼」連結來重設您的密碼。</string>
     <!-- Facebook connect password hint -->
     <string name="brand_password_hint_TEMPLATE">{brand} 密碼</string>
     <!-- Link accounts -->
@@ -887,7 +887,7 @@
     <!-- User Denied email permission Heading -->
     <string name="user_denied_permission_email_heading">確認電子郵件</string>
     <!-- User Denied email permission re-request message -->
-    <string name="user_denied_permission_email_message">若要以 Facebook 帳號登入，我們需要獲得授權以確認您的電子郵件地址。\n\n請輕觸下方的 Facebook 按鈕以同意 Expedia 確認您的電子郵件地址。謝謝您！</string>
+    <string name="user_denied_permission_email_message_TEMPLATE">若要以 Facebook 帳號登入，我們需要獲得授權以確認您的電子郵件地址。\n\n請輕觸下方的 Facebook 按鈕以同意 {brand} 確認您的電子郵件地址。謝謝您！</string>
     <!-- Linking your accounts -->
     <string name="linking_your_accounts">正在連結帳戶…</string>
     <!-- Sign In -->
@@ -1436,7 +1436,7 @@
     <!-- Hotel phone number -->
     <string name="share_template_long_hotel_4_phone">電話\n%s</string>
     <!-- App download link -->
-    <string name="share_template_long_ad">訂飯店、訂機票，查看和分享您的行程。立即下載免費的 Expedia 行動裝置 App！\n%s</string>
+    <string name="share_long_ad_TEMPLATE">預訂飯店和機票，並查看和分享您的行程。立即下載免費 {brand} App。\n{appinfourl}</string>
     <!-- 1: city 2: date string -->
     <string name="share_template_subject_flight">我將於 %2$s飛往%1$s</string>
     <!-- 1: travelerName 2: city 3: date string -->
@@ -1532,7 +1532,7 @@
 
     <!-- Flights -->
     <!-- Label for Flight Search in task manager -->
-    <string name="Expedia_Flights">Expedia 機票</string>
+    <string name="Flights_TEMPLATE">{brand} 個班機</string>
     <!-- Label for flight search part of app -->
     <string name="search_flights">搜尋班機</string>
     <!-- Hint in edit text that indicates one should enter a departure airport -->
@@ -2847,7 +2847,7 @@
     <!-- Label for "Expedia website" button in info page -->
     <string name="website_TEMPLATE">{brand} 網站</string>
     <!-- Label for "app support" button in info page -->
-    <string name="app_support_TEMPLATE">App 技術支援</string>
+    <string name="app_support">App 技術支援</string>
     <!-- Label for link to terms and conditions -->
     <string name="info_label_terms_conditions">條款和條件</string>
     <!-- Label for link to privacy policy -->
@@ -2975,7 +2975,7 @@
     <!-- The hotel booking failed -->
     <string name="e3_error_checkout_booking_failed">出現錯誤導致我們無法完成您的預訂。請再試一次。</string>
     <!-- The hotel booking succeeded, but there were some errors. Likely an email was not sent -->
-    <string name="e3_error_checkout_booking_succeeded_with_errors">您已成功預訂飯店!如果急需安排行程，請聯絡 Expedia 客戶支援。</string>
+    <string name="e3_error_checkout_booking_succeeded_with_errors_TEMPLATE">您已成功預訂飯店!如需立即取得行程表，請聯絡 {brand} 客服中心。</string>
     <!-- The hotel room is no longer available -->
     <string name="e3_error_checkout_hotel_room_unavailable">很抱歉，已經沒有您要求的客房。</string>
     <!-- There is invalid input in the hotel booking form. Please fix it. -->
@@ -3000,7 +3000,7 @@
     <string name="e3_error_hotel_offers_hotel_offer_unavailable">很抱歉。此客房的優惠已結束，但我們仍有其他優惠。</string>
     <string name="e3_error_hotel_offers_hotel_room_unavailable">很抱歉，已經沒有您要求的客房。</string>
     <!-- For some reason the API failed and we couldn't complete the search -->
-    <string name="e3_error_hotel_offers_hotel_service_failure">很抱歉，我們無法連接到 Expedia。請再試一次。</string>
+    <string name="e3_error_hotel_offers_hotel_service_failure_TEMPLATE">很抱歉，我們無法連接到 {brand}。請再試一次。</string>
     <!-- There are no longer any rooms for the hotel offer -->
     <string name="e3_error_hotel_offers_invalid_input">很抱歉。此客房的優惠已結束，但我們仍有其他優惠。</string>
     <!-- There are no longer any rooms for the hotel offer -->
